check_output.txt
    Checking vibeanvil v0.2.0 (D:\Code\vibeanvil)
error[E0308]: mismatched types
   --> src\cli\watch.rs:72:45
    |
 72 |             debouncer.watcher().watch(&cwd, RecursiveMode::Recursive)?;
    |                                 -----       ^^^^^^^^^^^^^^^^^^^^^^^^ expected `RecursiveMode`, found `notify::RecursiveMode`
    |                                 |
    |                                 arguments to this method are incorrect
    |
note: two different versions of crate `notify` are being used; two types coming from two different versions of the same crate are different types even if they look the same
   --> C:\Users\Admin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\notify-6.1.1\src\config.rs:7:1
    |
  7 | pub enum RecursiveMode {
    | ^^^^^^^^^^^^^^^^^^^^^^ this is the found type `notify::RecursiveMode`
    |
   ::: C:\Users\Admin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\notify-8.2.0\src\config.rs:7:1
    |
  7 | pub enum RecursiveMode {
    | ^^^^^^^^^^^^^^^^^^^^^^ this is the expected type `notify_debouncer_mini::notify::RecursiveMode`
    |
   ::: src\cli\watch.rs:5:5
    |
  5 | use notify::RecursiveMode;
    |     ------ one version of crate `notify` used here, as a direct dependency of the current crate
  6 | use notify_debouncer_mini::new_debouncer;
    |     --------------------- one version of crate `notify` used here, as a dependency of crate `notify_debouncer_mini`
    = help: you can use `cargo tree` to explore your dependency tree
note: method defined here
   --> C:\Users\Admin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\notify-8.2.0\src\lib.rs:338:8
    |
338 |     fn watch(&mut self, path: &Path, recursive_mode: RecursiveMode) -> Result<()>;
    |        ^^^^^

error[E0308]: mismatched types
   --> src\cli\watch.rs:75:64
    |
 75 |                 if let Err(e) = debouncer.watcher().watch(dir, RecursiveMode::Recursive) {
    |                                                     -----      ^^^^^^^^^^^^^^^^^^^^^^^^ expected `RecursiveMode`, found `notify::RecursiveMode`
    |                                                     |
    |                                                     arguments to this method are incorrect
    |
note: two different versions of crate `notify` are being used; two types coming from two different versions of the same crate are different types even if they look the same
   --> C:\Users\Admin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\notify-6.1.1\src\config.rs:7:1
    |
  7 | pub enum RecursiveMode {
    | ^^^^^^^^^^^^^^^^^^^^^^ this is the found type `notify::RecursiveMode`
    |
   ::: C:\Users\Admin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\notify-8.2.0\src\config.rs:7:1
    |
  7 | pub enum RecursiveMode {
    | ^^^^^^^^^^^^^^^^^^^^^^ this is the expected type `notify_debouncer_mini::notify::RecursiveMode`
    |
   ::: src\cli\watch.rs:5:5
    |
  5 | use notify::RecursiveMode;
    |     ------ one version of crate `notify` used here, as a direct dependency of the current crate
  6 | use notify_debouncer_mini::new_debouncer;
    |     --------------------- one version of crate `notify` used here, as a dependency of crate `notify_debouncer_mini`
    = help: you can use `cargo tree` to explore your dependency tree
note: method defined here
   --> C:\Users\Admin\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\notify-8.2.0\src\lib.rs:338:8
    |
338 |     fn watch(&mut self, path: &Path, recursive_mode: RecursiveMode) -> Result<()>;
    |        ^^^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `vibeanvil` (bin "vibeanvil") due to 2 previous errors
